# real-state

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  install.sh
nginx/: Dockerfile
nginx/www/: 500.html
real_state/: .env  Dockerfile  pyproject.toml  pytest.ini  uwsgi.ini
real_state/base/: exceptions.py  models.py
real_state/chats/: constants.py  models.py  openai_utils.py  urls.py  views.py
real_state/chats/migrations/: 0001_initial.py
real_state/chats/templates/: chat.html  chat_home.html
real_state/estates/: constants.py  endpoints.py
real_state/estates/management/commands/: populate.py
real_state/estates/tests/: tests_enpoints.py  tests_models.py
real_state/real_state/: api_router.py  asgi.py  auth.py  mongodb.py  schema.py  settings.py  testing_settings.py  urls.py  wsgi.py
real_state/real_state/templates/: base.html
real_state/real_state/tests/: test_base.py
real_state/static/css/: styles.css
real_state/users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
real_state/users/migrations/: 0001_initial.py
real_state/users/templates/: home.html  login.html  register.html
real_state/users/tests/: tests_views.py
